# instaapp-ai

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
instaapp/: asgi.py  settings.py  urls.py  wsgi.py
